part3/4/k8s/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: todo-namespace
  name: prefix-strip
spec:
  stripPrefix:
    prefixes:
      - '/todos'
    forceSlash: false
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: todo-namespace
  name: todo-ingress
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    traefik.ingress.kubernetes.io/router.middlewares: default-prefix-strip@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 2346
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend-svc
                port:
                  number: 2345
